--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Pantry</string>
+    <string name="btn">Button</string>
+    <string name="message">Hello Geeks!! This is a Button.</string>
 </resources>
